Bug fix: don't try to flood fill or let the user enter text if she has not selected a paint yet (which was causing error messages)
Buf fix: don't cause an additional exception when handling an exception with an empty stack trace

-- Version 2.0.0, released 13-9-2015

 * WorldPainter now requires Java 8! Download Java 8 from Oracle here: http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html
 * The 32-bit version no longer works on 64-bit Windows. If you have 64-bit Windows, make sure to have 64-bit Java installed and to download the 64-bit version of WorldPainter. You can download 64-bit Java here by choosing "Windows x64" (the .exe variant): http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html
 * The way of painting layers, terrain and biomes has been changed. You now have a set of powerful new general painting tools, which can paint with any terrain, layer or biome you select
   + This means that instead of just selecting a layer or terrain in order to paint it, you must now select the "paint" (a layer, a terrain, a biome or an annotation colour) from one of the palettes *and* a painting tool from the top row of the tool box. For the old behaviour, select the Spray Paint tool (the top left button in the tool box, or Alt+r)
   + The new painting tools are powerful and flexible. They are:
     - The Spray Paint tool. This tool works exactly like the old way of painting layers, terrain and biomes. It applies the selected "paint" to the world in the shape of the current brush continuously as long as you hold down the mouse button
       o On/off layers (like Frost) and discrete layers (like Biomes and Annotations) are dithered
     - The Pencil. This is a line drawing tool which paints continuous lines of the selected "paint" by applying the current brush along a line
       o Paint freehand lines by clicking and dragging the mouse
       o Paint dots by clicking and releasing the mouse